<resources>
    <string name="app_name">猫漫</string>

    <string name="default_header_text">因为遇见你\n我才知道我也能拥有美丽的记忆</string>

    <!--navigation-->
    <string name="navi_main">首页</string>
    <string name="navi_type">分类</string>
    <string name="navi_search">搜索</string>
    <string name="navi_setting">设置</string>
    <string name="navi_about">关于</string>

    <!--漫画类型-->
    <string-array name="comic_type">
        <item>少年漫画</item>
        <item>青年漫画</item>
        <item>少女漫画</item>
        <item>耽美漫画</item>
    </string-array>

    <!--书完结状态-->
    <string name="book_finished">已完结</string>
    <string name="book_unfinished">未完结</string>

    <!--toolbar title-->
    <string name="title_main">我的漫画</string>
    <string name="title_type">分类</string>
    <string name="title_search">搜索</string>
    <string name="title_about">关于</string>
    <string name="title_setting">设置</string>


    <string name="navi_open">打开</string>
    <string name="navi_close">关闭</string>

    <!--navi title-->
    <string-array name="navi_title">
        <item>首页</item>
        <item>分类</item>
        <item>搜索</item>
        <item>设置</item>
        <item>关于</item>
    </string-array>

    <!--navi-->
    <string name="navi_register_sign_in">注册/登录</string>
    <string name="navi_user_info">个人信息</string>

    <!--user-->
    <string name="user_sign_in_welcome">终于等到你啦！</string>
    <string name="user_sign_in_name_email">用户名/邮箱</string>
    <string name="user_sign_in_pwd">密码</string>
    <string name="user_sign_in_sign">登录</string>
    <string name="user_register">新用户注册</string>
    <string name="user_forget_pwd">忘记密码？</string>
    <string name="user_register_name">用户名</string>
    <string name="user_register_email">邮箱</string>
    <string name="user_register_pwd">密码</string>
    <string name="user_register_pwd_confirm">确认密码</string>
    <string name="user_register_register">注册</string>
    <string name="user_forget_email">请输入邮箱</string>
    <string name="user_forget_post">提交</string>

    <!--toast-->
    <string name="toast_forget_success">重置密码链接已发送到邮箱</string>
    <string name="toast_forget_fail">邮箱格式有误</string>
    <string name="toast_email_not_found">该邮箱没有注册，请先注册</string>
    <string name="toast_sign_in_error">用户信息有误,请检查!</string>
    <string name="toast_sign_in_email_not_found">邮箱没有注册，请先注册！</string>
    <string name="toast_sign_in_user_not_exist">用户不存在</string>
    <string name="toast_sign_in_user_name_error">用户名错误</string>
    <string name="toast_sign_in_success">登录成功</string>
    <string name="toast_register_email_error">邮箱格式有误，请检查！</string>
    <string name="toast_register_email_registered">邮箱已被注册</string>
    <string name="toast_register_user_name_same">用户名已经存在，请重新输入</string>
    <string name="toast_register_pwd_not_same">密码不正确，请检查</string>
    <string name="toast_register_success">注册成功</string>
    <string name="toast_search_et_null">请输入书名</string>
    <string name="toast_search_add">已添加至书库</string>
    <string name="toast_search_delete">已从书库删除</string>

    <!--content-->
    <string name="content_brightness">亮度</string>

    <!--book_note-->
    <string name="book_note_hint">记点东西吧~</string>
    <string name="book_note_save">保存</string>
    <string name="book_note_none">写点东西后才能保存哦~</string>
    <string name="book_note_save_success">保存成功</string>

    <string name="book_none">还没有漫画书呢~\n去添加点吧</string>
    <string name="book_add">去添加点吧</string>

    <!--about-->
    <string name="about_advise">意见反馈</string>
    <string name="about_advise_intro">提点意见又或调戏开发者</string>
    <string name="about_advise_no_user">登录后才能反馈意见哦~</string>
    <string name="about_protocol">开源协议</string>
    <string name="about_protocol_intro">感谢开源世界</string>
    <string name="about_icon_designer_link">https://weibo.com/u/5447517178</string>
    <string name="about_project_name">了解项目</string>
    <string name="about_project_tip_text">欢迎star和pull requests</string>
    <string name="project_location">https://github.com/chrissen0814/Cartoon</string>

    <!--feedback-->
    <string name="feedback_title">反馈&#38;闲聊</string>
    <string name="feedback_send">发送</string>
    <string name="shortcuts_help">联系开发者</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
