<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chrissen.cartoon.activity.user.SignInActivity">


    <TextView
        android:id="@+id/sign_in_welcome_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="80dp"
        android:text="@string/user_sign_in_welcome"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        android:textStyle="bold"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/sign_in_name_email_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@id/sign_in_welcome_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="@dimen/card_view_margin_left_right"
        android:layout_marginRight="@dimen/card_view_margin_left_right">


        <EditText
            android:id="@+id/sign_in_name_email_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/user_sign_in_name_email"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/sign_in_pwd_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_name_email_til"
        android:layout_marginLeft="@dimen/card_view_margin_left_right"
        android:layout_marginRight="@dimen/card_view_margin_left_right"
        android:layout_marginTop="32dp">

        <EditText
            android:id="@+id/sign_in_pwd_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_sign_in_pwd"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_pwd_til"
        android:layout_marginLeft="@dimen/card_view_margin_left_right"
        android:layout_marginRight="@dimen/card_view_margin_left_right"
        android:layout_marginTop="42dp"
        android:background="@drawable/button_sign_bg"
        android:text="@string/user_sign_in_sign"
        android:textColor="@android:color/white"
        android:clickable="true"
        android:onClick="onSignClick"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_register"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="@dimen/card_view_margin_left_right"
        android:layout_marginBottom="@dimen/card_view_margin_top_bottom"
        android:textColor="@android:color/black"
        android:clickable="true"
        android:onClick="onRegisterClick"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_forget_pwd"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginRight="@dimen/card_view_margin_left_right"
        android:layout_marginBottom="@dimen/card_view_margin_top_bottom"
        android:textColor="@android:color/black"
        android:clickable="true"
        android:onClick="onForgetPwdClick"/>


</android.support.constraint.ConstraintLayout>
