<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chrissen.cartoon.activity.user.RegisterActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_name_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="@dimen/card_view_margin_left_right"
        android:layout_marginRight="@dimen/card_view_margin_left_right"
        android:layout_marginTop="32dp">

        <EditText
            android:id="@+id/register_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_register_name"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_email_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_name_til"
        android:layout_marginLeft="@dimen/card_view_margin_left_right"
        android:layout_marginRight="@dimen/card_view_margin_left_right"
        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/register_email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_register_email"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_pwd_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_email_til"
        android:layout_marginLeft="@dimen/card_view_margin_left_right"
        android:layout_marginRight="@dimen/card_view_margin_left_right"
        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/register_pwd_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_register_pwd"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_confirm_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_pwd_til"
        android:layout_marginLeft="@dimen/card_view_margin_left_right"
        android:layout_marginRight="@dimen/card_view_margin_left_right"
        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/register_pwd_confirm_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_register_pwd_confirm"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_confirm_til"
        android:layout_marginLeft="@dimen/card_view_margin_left_right"
        android:layout_marginRight="@dimen/card_view_margin_left_right"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_sign_bg"
        android:textColor="@android:color/white"
        android:text="@string/user_register_register"
        android:clickable="true"
        android:onClick="onSignInClick"/>

</android.support.constraint.ConstraintLayout>
