<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/about_head_image_iv"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:minHeight="0dp"
            android:src="@color/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"/>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/about_developer_cv"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_marginLeft="@dimen/card_view_margin_left_right"
                android:layout_marginRight="@dimen/card_view_margin_left_right"
                android:layout_marginTop="@dimen/card_view_margin_top_bottom"
                app:cardCornerRadius="@dimen/card_view_coner_radius">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="12dp"
                        android:text="开发者"/>
                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/about_advise_cv"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_marginLeft="@dimen/card_view_margin_left_right"
                android:layout_marginRight="@dimen/card_view_margin_left_right"
                android:layout_marginTop="@dimen/card_view_margin_top_bottom"
                app:cardCornerRadius="@dimen/card_view_coner_radius">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.constraint.Guideline
                        android:id="@+id/guideline5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintGuide_percent="0.5"/>

                    <TextView
                        android:id="@+id/about_advise_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="12dp"
                        android:text="@string/about_advise"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/guideline5"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_advise_intro"
                        android:layout_marginTop="10dp"
                        android:textColor="#aaa"
                        android:textSize="12sp"
                        app:layout_constraintLeft_toLeftOf="@id/about_advise_tv"
                        app:layout_constraintTop_toBottomOf="@id/guideline5"/>


                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/about_protocol_cv"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_marginLeft="@dimen/card_view_margin_left_right"
                android:layout_marginRight="@dimen/card_view_margin_left_right"
                android:layout_marginTop="@dimen/card_view_margin_top_bottom"
                android:layout_marginBottom="@dimen/card_view_margin_top_bottom"
                app:cardCornerRadius="@dimen/card_view_coner_radius">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.constraint.Guideline
                        android:id="@+id/guideline6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintGuide_percent="0.5"/>

                    <TextView
                        android:id="@+id/about_protocol_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="12dp"
                        android:text="@string/about_protocol"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/guideline6"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_protocol_intro"
                        android:layout_marginTop="10dp"
                        android:textColor="#aaa"
                        android:textSize="12sp"
                        app:layout_constraintLeft_toLeftOf="@id/about_protocol_tv"
                        app:layout_constraintTop_toBottomOf="@id/guideline6"/>


                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
